syntax = "proto3";

package customer;

option go_package = "govo/api/proto/customer";

service CustomerService {
  rpc CreateCustomer(CreateCustomerRequest) returns (CreateCustomerResponse);
  rpc GetCustomer(GetCustomerRequest) returns (GetCustomerResponse);
  rpc UpdateCustomer(UpdateCustomerRequest) returns (UpdateCustomerResponse);
  rpc DeleteCustomer(DeleteCustomerRequest) returns (DeleteCustomerResponse);
  rpc ListCustomers(ListCustomersRequest) returns (ListCustomersResponse);
}

message CreateCustomerRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string phone = 4;
  string address = 5;
  float balance = 6;
}

message CreateCustomerResponse {
  uint32 id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  string address = 6;
  float balance = 7;
  repeated string cards = 8;
}

message GetCustomerRequest {
  uint32 id = 1;
}

message GetCustomerResponse {
  uint32 id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  string address = 6;
  float balance = 7;
  repeated string cards = 8;
}

message UpdateCustomerRequest {
  uint32 id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  string address = 6;
  float balance = 7;
}

message UpdateCustomerResponse {
  uint32 id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  string address = 6;
  float balance = 7;
  repeated string cards = 8;
}

message DeleteCustomerRequest {
  uint32 id = 1;
}

message DeleteCustomerResponse {
  bool success = 1;
}

message ListCustomersRequest {}

message ListCustomersResponse {
  repeated GetCustomerResponse customers = 1;
} 